[gd_scene load_steps=10 format=3 uid="uid://c6wvsxy8lmhiy"]

[ext_resource type="Script" path="res://saida.gd" id="1_0uxvy"]
[ext_resource type="Texture2D" uid="uid://003o0kiwnq3s" path="res://assets/sprites/atlas/door_closed.tres" id="2_13iys"]
[ext_resource type="Texture2D" uid="uid://b2x655svnsy3l" path="res://assets/sprites/atlas/door_opened.tres" id="3_0qqu1"]
[ext_resource type="AudioStream" uid="uid://d0qxn7hgfekob" path="res://assets/se/porta_abrindo.mp3" id="4_7j5hk"]
[ext_resource type="AudioStream" uid="uid://c4jm66u5lyhpr" path="res://assets/se/door_open.mp3" id="5_wgjoc"]

[sub_resource type="SpriteFrames" id="SpriteFrames_kkstq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_13iys")
}],
"loop": true,
"name": &"closed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_0qqu1")
}],
"loop": true,
"name": &"opened",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h4arj"]
size = Vector2(26, 24.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h2am6"]
size = Vector2(12, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lbr8s"]
size = Vector2(56, 54)

[node name="saida" type="Node2D"]
script = ExtResource("1_0uxvy")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="StaticBody2D"]
sprite_frames = SubResource("SpriteFrames_kkstq")
animation = &"closed"

[node name="Colisor_Porta" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 0.75)
shape = SubResource("RectangleShape2D_h4arj")

[node name="change_room" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="change_room"]
position = Vector2(0, -6.5)
shape = SubResource("RectangleShape2D_h2am6")

[node name="open" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_7j5hk")

[node name="close" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_wgjoc")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(18, 17)
shape = SubResource("RectangleShape2D_lbr8s")

[connection signal="body_entered" from="change_room" to="." method="_on_change_room_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
